--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div id="container">
+        <p>Calculator</p>
+        <div id="calculator-body">
+            <div class="calc-visor"></div>
+
+            <div class="buttons">
+                <button class="btn clear">C</button>
+                <button class="btn percentage">%</button>
+                <button class="btn div">/</button>
+                <button class="btn mult">*</button>
+                <button class="btn number" name="7">7</button>
+                <button class="btn number" name="8">8</button>
+                <button class="btn number" name="9">9</button>
+                <button class="btn sub">-</button>
+                <button class="btn number" name="4">4</button>
+                <button class="btn number" name="5">5</button>
+                <button class="btn number" name="6">6</button>
+                <button class="btn add">+</button>
+                <button class="btn number" name="1">1</button>
+                <button class="btn number" name="2">2</button>
+                <button class="btn number" name="3">3</button>
+                <button class="btn equals">=</button>
+                <button class="btn zero number" name ="0">0</button>
+                <button class="btn decimal">.</button>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="js/scripts.js"></script>
 </html>
