--- a/index.html
+++ b/index.html
@@ -10,27 +10,29 @@
     <div id="container">
         <p>Calculator</p>
         <div id="calculator-body">
-            <div class="calc-visor"></div>
+            <div class="calc-visor">
+                <p class="monitor">123456789</p>
+            </div>
 
             <div class="buttons">
-                <button class="btn clear">C</button>
-                <button class="btn percentage">%</button>
-                <button class="btn div">/</button>
-                <button class="btn mult">*</button>
+                <button class="btn clear" name="clear">C</button>
+                <button class="btn percentage" name="percentage">%</button>
+                <button class="btn div" name="division">/</button>
+                <button class="btn mult" name="multiplication">*</button>
                 <button class="btn number" name="7">7</button>
                 <button class="btn number" name="8">8</button>
                 <button class="btn number" name="9">9</button>
-                <button class="btn sub">-</button>
+                <button class="btn sub" name="subtraction">-</button>
                 <button class="btn number" name="4">4</button>
                 <button class="btn number" name="5">5</button>
                 <button class="btn number" name="6">6</button>
-                <button class="btn add">+</button>
+                <button class="btn add" name="addition">+</button>
                 <button class="btn number" name="1">1</button>
                 <button class="btn number" name="2">2</button>
                 <button class="btn number" name="3">3</button>
-                <button class="btn equals">=</button>
+                <button class="btn equals" name="equals">=</button>
                 <button class="btn zero number" name ="0">0</button>
-                <button class="btn decimal">.</button>
+                <button class="btn decimal" name="floating">.</button>
             </div>
         </div>
     </div>
