--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 
             <div class="buttons">
                 <button class="btn clear" name="clear">C</button>
-                <button class="btn percentage" name="percentage">%</button>
-                <button class="btn div" name="division">/</button>
-                <button class="btn mult" name="multiplication">*</button>
+                <button class="btn percentage" name="%">%</button>
+                <button class="btn div" name="/">/</button>
+                <button class="btn mult" name="*">*</button>
                 <button class="btn number" name="7">7</button>
                 <button class="btn number" name="8">8</button>
                 <button class="btn number" name="9">9</button>
-                <button class="btn sub" name="subtraction">-</button>
+                <button class="btn sub" name="-">-</button>
                 <button class="btn number" name="4">4</button>
                 <button class="btn number" name="5">5</button>
                 <button class="btn number" name="6">6</button>
-                <button class="btn add" name="addition">+</button>
+                <button class="btn add" name="+">+</button>
                 <button class="btn number" name="1">1</button>
                 <button class="btn number" name="2">2</button>
                 <button class="btn number" name="3">3</button>
-                <button class="btn equals" name="equals">=</button>
+                <button class="btn equals" name="=">=</button>
                 <button class="btn zero number" name ="0">0</button>
                 <button class="btn decimal" name="floating">.</button>
             </div>
