starting to refactor and planning the functions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>Calculator</p>
         <div id="calculator-body">
             <div class="calc-visor">
-                <p class="monitor">123456789</p>
+                <p class="monitor">0</p>
             </div>
 
             <div class="buttons">
