minimal working basic operands, some caucatenation , but fixes and others will be neede in the future

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
         <p>Calculator</p>
         <div id="calculator-body">
             <div class="calc-visor">
-                <p class="monitor">0</p>
+                <div class="monitor">0</div>
+                <div class="operand"></div>
             </div>
 
             <div class="buttons">
                 <button class="btn clear" name="clear">C</button>
-                <button class="btn percentage" name="%">%</button>
+                <button class="btn backspace" name="backspace"><-</button>
                 <button class="btn div" name="/">/</button>
                 <button class="btn mult" name="*">*</button>
                 <button class="btn number" name="7">7</button>
